--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 .DS_store
 Google-Playstore.csv
 google_app_info.csv
+app_install_df.csv
 clean_google_playstore.csv
 local_settings.py
 .ipynb_checkpoints
