--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 Google-Playstore.csv
 google_app_info.csv
 app_install_df.csv
+app_installs.csv
 clean_google_playstore.csv
 local_settings.py
 .ipynb_checkpoints
